src/objects/Car_Owner__c.object
<CustomObject>
    <fields>
        <fullName>Birthday__c</fullName>
        <label>Birthday</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <label>First Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Full_Name__c</fullName>
        <formula>First_Name__c +&quot; &quot;+ Last_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Full Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <label>Last Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Passport_Number__c</fullName>
        <label>Passport Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Car Owner</label>
    <nameField>
        <displayFormat>CO-{00000}</displayFormat>
        <label>Car Owner Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Car Owners</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Birthday_Validation</fullName>
        <active>true</active>
        <errorConditionFormula>Birthday__c &gt; TODAY()</errorConditionFormula>
        <errorDisplayField>Birthday__c</errorDisplayField>
        <errorMessage>Incorrect Birthday</errorMessage>
    </validationRules>
</CustomObject>